# linear

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
src/exercise1/: notebook.ipynb
src/exercise2/stage1/: notebook.ipynb
src/exercise2/stage2/: notebook.ipynb
src/exercise2/stage3/: notebook.ipynb
