[project]
name = "linear"
version = "0.1.0"
description = "Build my own Linear Regression model"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
]
